[package]
name = "gnt-tools"
version = "0.2.0"
edition = "2021"
authors = ["G.T.L. Berloty"]
license = "CC-BY-NC-4.0"
description = "Tools to help studying the greek new testament. The crate is provided AS-IS."
repository = "https://github.com/kylak/gnt-tools"
keyword = ["greek-new-testament", "bible", "Jesus", "uncial", "greek"]
categories = ["command-line-interface", "algorithms", "command-line-utilities"]

[dependencies]
unicode-normalization = "0.1.24"
